// file: pkg/web/proto/messages/file_info.proto
// version: 1.0.0
// guid: ee525bfe-ed87-4698-bf47-41bff85db277

edition = "2023";

package gcommon.v1.web;

import "google/protobuf/go_features.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/web/proto;webpb";
option features.(pb.go).api_level = API_HYBRID;

// FileInfo message definition.
message FileInfo {
  string placeholder = 1;
}
